# ALX_Foundation_Portfolio_Project

./: .gitignore  CMakeLists.txt  README.md  index.html
inc/: Ball.h  Collision.h  CustomClock.h  GameClock.h  GameData.h  GameParty.h  Paddle.h  Splashscreen.h  UserInterface.h  spritesheet_map.h  theme.h
src/: Ball.cpp  Collision.cpp  CustomClock.cpp  GameData.cpp  GameParty.cpp  Paddle.cpp  Splashscreen.cpp  UserInterface.cpp  main.cpp
